# bellande_ros_models

./: LICENSE  README.md
.github/workflows/: docker-image.yml
docker/: Dockerfile.ros1  Dockerfile.ros2
ros_web_api_bellande_2d_computer_vision_models/: CMakeLists.txt  package.xml
ros_web_api_bellande_2d_computer_vision_models/config/: configs.json
ros_web_api_bellande_3d_computer_vision_models/: CMakeLists.txt  package.xml
ros_web_api_bellande_3d_computer_vision_models/config/: configs.json
ros_web_api_bellande_adaptive_alternate_path_creation_models/: CMakeLists.txt  package.xml
ros_web_api_bellande_adaptive_alternate_path_creation_models/config/: configs.json
ros_web_api_bellande_adaptive_continuious_controller_models/: CMakeLists.txt  package.xml
ros_web_api_bellande_adaptive_continuious_controller_models/config/: configs.json
ros_web_api_bellande_extremum_optimization_models/: CMakeLists.txt  package.xml
ros_web_api_bellande_extremum_optimization_models/config/: configs.json
ros_web_api_bellande_motion_probabilistic_models/: CMakeLists.txt  package.xml
ros_web_api_bellande_motion_probabilistic_models/config/: config_instance_segmentation.json  config_object_detection.json  config_prediction.json  config_sementic_segmentation.json  configs.json
ros_web_api_bellande_search_path_models/: CMakeLists.txt  README.md  package.xml
ros_web_api_bellande_search_path_models/config/: configs.json
ros_web_api_bellande_speech_detection_models/: CMakeLists.txt  package.xml
ros_web_api_bellande_speech_detection_models/config/: configs.json
ros_web_api_bellande_step_models/: CMakeLists.txt  README.md  package.xml  setup.py
ros_web_api_bellande_step_models/launch/: bellande_step_api_2d.launch.py
ros_web_api_bellande_step_models/script/: build.sh
ros_web_api_bellande_step_models/src/: bellande_step_api_2d.py
scripts/: .gitignore  build_docker.sh  catkin_setup.sh  colcon_setup.sh  reset_docker.sh
(+1 files in other folders)
